# anduril

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  flake.nix  pyproject.toml  test_anduril.py
.github/workflows/: ci.yml
anduril/: __init__.py  __main__.py  agent.py  cli.py  context.py  env.py  files.py  highlight.py  mcp_client.py  metrics.py  pricing.py  sessions.py  skills.py  tools.py  tui.py
anduril/contrib/skills/web/: SKILL.md  __init__.py
anduril/tui_textual/: app.py  ask_bridge.py
anduril/tui_textual/widgets/: agent_input.py  agent_output.py  ask_modal.py  command_palette.py  file_picker.py  status_bar.py  thinking.py
